--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,13 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">
         <link rel="icon" href="/4geeks.ico">
+        
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@500&family=New+Rocker&family=Playwrite+BE+VLG:wght@100..400&display=swap" rel="stylesheet">
+
+        <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@500&family=New+Rocker&family=Playwrite+BE+VLG:wght@100..400&display=swap" rel="stylesheet">
+
         <script defer="defer" src="/bundle.js"></script>
     </head>
     <body class="h-100">
