home page style update

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="h-100">
+<html class="mw-100 mh-100">
     <head>
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <meta charset="UTF-8">
